Prepare to deploy the server side to Heroku

--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
     "start": "node index",
     "dev": "nodemon index"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
