--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
+    "hosted-git-info": "^4.0.2",
     "node-sass": "^5.0.0",
+    "normalize-url": "^7.0.2",
+    "path-parse": "^1.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
