--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "mpath": "^0.8.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
