--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,20 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
+    "chokidar": "^3.5.2",
+    "core-js": "^3.19.2",
     "hosted-git-info": "^4.0.2",
+    "immer": "^9.0.7",
     "node-sass": "^5.0.0",
     "normalize-url": "^7.0.2",
+    "nth-check": "^2.0.1",
     "path-parse": "^1.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "trim-newlines": "^4.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
